# cnc

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  Makefile.am  README.adoc  README.md  autogen.sh  configure.ac  rustfmt.toml  test.ini  test.yaml
.github/workflows/: build.yml  rust.yml
configs/: ci-config.ini  example.ini  test.ini
configs/tests/: ci-config.ini  multiple_db_config.ini  single_db_config.ini
docs/: CONTRIBUTING.adoc  config.adoc  db-ops-api.adoc  docker.adoc  email.adoc  testing.adoc
examples/: postgres.toml
include/: cnc.h  config.h  email.h  log.h  util.h
include/db/: db.h  mongodb.h  postgres.h
include/rust/: email-bindings.h
rust/email/: Cargo.toml  build.rs
rust/email/src/: lib.rs
scripts/: build-rust-libs.sh  mongo-down.sh  mongo-up.sh  postgres-down.sh  postgres-up.sh
src/: cli.rs  cnc.c  config.c  db.c  email.c  lib.rs  log.c  logger.rs  main.c  main.rs  mongodb.c  postgres.c  util.c
src/config/: config.rs  email.rs  mod.rs  postgres.rs
src/db/: db_operations.rs  mod.rs  postgresdb.rs
tests/: cnc_test.c
