[package]
name = "cnc-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Charalampos Mitrodimas"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
postgres = "0.19.9"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
