[package]
name = "cnc-rs"
version = "0.1.3"
rust-version = "1.81"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["Charalampos Mitrodimas"]
homepage = "https://github.com/terra-sync/cnc"
repository = "https://github.com/terra-sync/cnc"
description = """
A Rust-based project for PostgreSQL replication and email notifications with a configurable CLI.
"""

[[bin]]
name = "cnc"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
lazy_static = "1.5.0"
lettre = { version = "0.11.11", features = ["serde"] }
log = "0.4.22"
postgres = "0.19.9"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
