[package]
name = "email"
version = "0.1.0"
edition = "2021"

[lib]
name = "email"
crate-type = ["cdylib"]      # Creates dynamic lib
#crate-type = ["staticlib"] # Creates static lib
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.11.4"
tracing-subscriber = "0.3.18"

[build-dependencies]
cbindgen = "0.24.0"

